--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -6,10 +6,10 @@ runs:
     - name: Setup Node.js ⚙️
       uses: actions/setup-node@v4
       with:
-      node-version: 20
+        node-version: 20
 
     - name: Cache dependencies ⚡
-      id:
+      id: cache_dependencies
       uses: actions/cache@v3
       with:
         path: node_modules
